[package]
name = "glow_plug"
decription = "Testing macro for diesel to create a clean database for each test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
glow_plug_macros = { path = "../glow_plug_macros", version = "0.1.0" }
diesel_migrations = { version = "2.0.0" }
tokio = { version = "1.30.0", features = ["macros"], optional = true }
futures = { version = "0.3.30", optional = true }
dotenvy = "0.15"
diesel = { version = "2.0.0" }

[features]
tokio = ["dep:tokio",  "dep:futures"]
