[package]
name = "glow_plug_macros"
description = "The internal macros for glow plug"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full"] }
dotenvy = "0.15"
proc-macro2 = { version = "1.0.84", features = ["span-locations"] }
rand = "0.8.5"
